--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -7,5 +7,5 @@
 Welcome to your new app.
 
 <div class="d-flex flex-column">
-    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="tanukiaibot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+    <script async suppress-error="BL9992" src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="tanukiaibot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
 </div>
