--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -5,3 +5,7 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+    <div class="d-flex flex-column">
+        <script suppress-error="BL9992" async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="tanukiaibot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+    </div>
