--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@using System.Text.Json
+@inject IJSRuntime Js
 
 <PageTitle>Home</PageTitle>
 
@@ -7,5 +9,9 @@
 Welcome to your new app.
 
 <div class="d-flex flex-column">
-    <script suppress-error="BL9992" async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="tanukiaibot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+	<script suppress-error="BL9992" async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="tanukiaibot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
 </div>
+
+@code {
+
+}
